--- a/style.css
+++ b/style.css
@@ -107,3 +107,63 @@ padding-left:10px;
 padding-right:10px;
 padding-bottom:5px;
 }
+
+
+
+  
+  
+  input[type=text], input[type=password] {
+	width: 100%;
+	padding: 12px 20px;
+	margin: 8px 0;
+	display: inline-block;
+	border: 1px solid #ccc;
+	box-sizing: border-box;
+  }
+  
+  
+  button {
+	background-color: #04AA6D;
+	color: white;
+	padding: 14px 20px;
+	margin: 8px 0;
+	border: none;
+	cursor: pointer;
+	width: 100%;
+  }
+  
+  
+  button:hover {
+	opacity: 0.8;
+  }
+  
+  /* cancel button*/
+  .cancelbtn {
+	width: auto;
+	padding: 10px 18px;
+	background-color: #0660fb;
+  }
+  
+  /* Add padding to containers */
+  .container {
+	padding: 16px;
+  }
+  
+  /* The "Forgot password" text */
+  span.psw {
+	float: right;
+	padding-top: 16px;
+  }
+  
+	.cancelbtn {
+	  width: 10%;
+	}
+
+	.Action{
+		font-size: 14px;
+		font-family: 'Open Sans';
+		font-weight: 600;
+		color: #3c29e1;
+		cursor: pointer;
+		border-bottom: 1px solid #3c29e1;
+	}
